# tcp_n_test

./: CMakeLists.txt  README.md
Core_Client/Src/: main.c
Core_Server/Src/: main.c
Protocol/Inc/: tcp_protocol.h  tcp_tlv.h
Protocol/Src/: tcp_protocol.c  tcp_tlv.c
tcp_client/Src/: main.c
tcp_n_server/Inc/: tcp_server.h
tcp_n_server/Src/: handle_client.c  main.c
tcp_server/Src/: main.c
